Arreglo de tabla

--- a/app/templates/inicio.html
+++ b/app/templates/inicio.html
@@ -103,7 +103,7 @@
 </div>
 {% endblock %}
 <!-- Scripts específicos de la página de inicio -->
-{% block extra_scripts %}
+{% block scripts %}
 <script id="area-data" type="application/json">
   {{ area_data | tojson }}
 </script>
