--- a/app/templates/participantes.html
+++ b/app/templates/participantes.html
@@ -40,46 +40,23 @@
   <h2 class="my-8 text-2xl font-semibold">Vista general</h2>
   <!-- Table of participants -->
   <div class="overflow-x-auto">
-    <table class="table">
-      <!-- head -->
-      <thead>
-        <tr>
-          <th></th>
-          <th>Name</th>
-          <th>Job</th>
-          <th>Favorite Color</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- row 1 -->
-        <tr>
-          <th>1</th>
-          <td>Cy Ganderton</td>
-          <td>Quality Control Specialist</td>
-          <td>Blue</td>
-        </tr>
-        <!-- row 2 -->
-        <tr>
-          <th>2</th>
-          <td>Hart Hagerty</td>
-          <td>Desktop Support Technician</td>
-          <td>Purple</td>
-        </tr>
-        <!-- row 3 -->
-        <tr>
-          <th>3</th>
-          <td>Brice Swyre</td>
-          <td>Tax Accountant</td>
-          <td>Red</td>
-        </tr>
-      </tbody>
-    </table>
+    <div id="participantes-table"></div>
   </div>
 </div>
 {% endblock %}
 <!-- Scripts -->
 {% block scripts %}
 <script id="participantes-data" type="application/json">
-  {{ participantes_data | tojson }}
+  {{ data | tojson  }}
+</script>
+<script>
+  const jsonData = JSON.parse(
+    document.getElementById("participantes-data").textContent
+  );
+  const columns = jsonData["columns"];
+  const data = jsonData["data"];
+
+  createTable(columns, data, "participantes-table");
+  console.log("Hola");
 </script>
 {% endblock %}
