--- a/app/templates/cursos_talleres/index.html
+++ b/app/templates/cursos_talleres/index.html
@@ -1,9 +1,12 @@
 {% extends "layouts/dashboardLayout.html" %}
 <!-- Title -->
 {% block title%}
-<span>Aportes</span>
+<span>Cursos y Talleres</span>
 {% endblock %}
 <!-- Content -->
 {% block content %}
 <span>Hola mundo</span>
 {% endblock %}
+<dialog>
+    
+</dialog>
