--- a/app/templates/participantes/index.html
+++ b/app/templates/participantes/index.html
@@ -36,6 +36,7 @@
     </div>
   </div>
 </div>
+<!-- Table -->
 <div>
   <h2 class="my-8 text-2xl font-semibold">Vista general</h2>
   <!-- Table of participants -->
