--- a/app/templates/aportes/index.html
+++ b/app/templates/aportes/index.html
@@ -1,7 +1,7 @@
 {% extends "layouts/dashboardLayout.html" %}
 <!-- Title -->
 {% block title%}
-<span>Cursos y Talleres</span>
+<span>Asignaciones</span>
 {% endblock %}
 <!-- Content -->
 {% block content %}
