--- a/app/templates/layouts/crudLayout.html
+++ b/app/templates/layouts/crudLayout.html
@@ -1,10 +1,10 @@
 {% extends "layouts/dashboardLayout.html" %}
 <!-- Scripts para el CRUD -->
 {% block head %}
-<!-- <link
+<link
   href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css"
   rel="stylesheet"
-/> -->
+/>
 <link
   href="{{ url_for('static', filename='css/tables.css') }}"
   rel="stylesheet"
