- Formato de participante y tutores: Index, formulario
- nose porque, pero me daba error a las tablas para ir de una tanda a otra, intente modificarlo pero no pude

- hice las listas para participantes, voluntarios, tutores y aportes, falta agregar un boton para AREGAR y falta hacer funcionar los botones para el CRUD

- hice lo que pude perdon, me pase mucho tiempo tratando de arreglar el error pero el framework es desconocido para mi wa

--- a/app/templates/participantes/index.html
+++ b/app/templates/participantes/index.html
@@ -55,9 +55,9 @@
     document.getElementById("participantes-data").textContent
   );
   const columns = jsonData["columns"];
-  const data = jsonData["data"];
+  const rawData = jsonData["data"];
 
-  createTable(columns, data, "participantes-table");
+  createTable(columns, rawData, "participantes-table");
   console.log("Hola");
 </script>
 {% endblock %}
