--- a/app/templates/participantes/index.html
+++ b/app/templates/participantes/index.html
@@ -41,49 +41,16 @@
   <h2 class="my-8 text-2xl font-semibold">Vista general</h2>
   <!-- Table of participants -->
   <div class="overflow-x-auto">
-    <div id="participantes-table"></div>
+    <div id="table-data"></div>
   </div>
 </div>
 {% endblock %}
 <!-- Scripts -->
 {% block scripts %}
-<script id="participantes-data" type="application/json">
+<script id="data" type="application/json">
   {{ data | tojson  }}
 </script>
 <script>
-
-  function generateSlug(text) {
-    return text
-      .toString()
-      .toLowerCase()
-      .replace(/\s+/g, "-") // Replace spaces with -
-      .replace(/[^\w\-]+/g, "") // Remove all non-word chars
-      .replace(/\-\-+/g, "-") // Replace multiple - with single -
-      .replace(/^-+/, "") // Trim - from start of text
-      .replace(/-+$/, ""); // Trim - from end of text
-  }
-
-  const jsonDataElement = document.getElementById("participantes-data");
-  if (!jsonDataElement || !jsonDataElement.textContent.trim()) {
-    console.error("Error: 'participantes-data' script element is missing or empty. Cannot load data.");
-  } else {
-    try {
-      const jsonData = JSON.parse(jsonDataElement.textContent);
-      if (!jsonData) {
-        console.error("Error: Parsed jsonData is null or undefined.");
-      } else {
-        const columns = jsonData["columns"];
-        const rawData = jsonData["data"];
-        if (!columns || !rawData) {
-          console.error("Error: 'columns' or 'data' keys are missing in jsonData.");
-        } else {
-          createTable(columns, rawData, "participantes-table");
-        }
-      }
-    } catch (e) {
-      console.error("Error parsing JSON data:", e);
-    }
-  }
-  console.log("Hola");
+  initializeTable("table-data");
 </script>
 {% endblock %}
