--- a/app/templates/voluntarios/index.html
+++ b/app/templates/voluntarios/index.html
@@ -53,9 +53,27 @@
   {{ data | tojson }}
 </script>
 <script>
-  const jsonData = JSON.parse(document.getElementById("voluntarios-data").textContent);
-  const columns = jsonData.columns;
-  const data = jsonData.data;
-  createTable(columns, data, "voluntarios-table");
+  const jsonDataElement = document.getElementById("voluntarios-data");
+  const rawData = JSON.parse(jsonDataElement.textContent);
+
+  const grid = new gridjs.Grid({
+    columns: ['ID','Nombre Completo','Correo','Nivel de Educacion','Acciones'],
+    data: rawData.map(row =>[
+      row[0],
+      row[1],
+      row[2],
+      row[3],
+      gridjs.html(`
+        <div class="flex gap-2">
+          <button class="btn btn-info" data-id="${row[0]}">Editar</button>
+          <button class="btn btn-error" data-id="${row[0]}">Eliminar</button>
+        </div>
+      `)
+    ]),
+    search: true,
+    pagination: {enabled: true, limit: 10}
+  });
+
+  grid.render(document.getElementById("voluntarios-table"))
 </script>
 {% endblock %}
