--- a/app/templates/layouts/dashboardLayout.html
+++ b/app/templates/layouts/dashboardLayout.html
@@ -21,6 +21,7 @@
       </div>
       <div class="p-8">{% block content %}{% endblock %}</div>
     </main>
+    {% block modal %}{% endblock %}
   </div>
   <!-- Barra lateral de navegación -->
   <div class="drawer-side z-40">
