--- a/app/templates/layouts/crudLayout.html
+++ b/app/templates/layouts/crudLayout.html
@@ -11,4 +11,21 @@
 />
 <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
 <script src="{{ url_for('static', filename='js/table.js') }}"></script>
+<script defer src="{{ url_for('static', filename='js/modal.js') }}"></script>
+{% endblock %}
+<!-- Modal -->
+{% block modal %}
+<dialog id="modal" class="modal">
+  <div class="modal-box">
+    <form method="dialog">
+      <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">
+        <box-icon name="window-close"></box-icon>
+      </button>
+    </form>
+    <div id="modal-content">
+      <h3>Formulario</h3>
+      <iframe id="modal-iframe" title="form" src=""></iframe>
+    </div>
+  </div>
+</dialog>
 {% endblock %}
